--- a/PCB/7SegClock.cmp
+++ b/PCB/7SegClock.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2014-12-26 BZR 5338)-product   date = Tue 13 Jan 2015 01:30:53 AM EST
+Cmp-Mod V01 Created by Cvpcb (2014-12-26 BZR 5338)-product   date = Tue 13 Jan 2015 02:17:09 AM EST
 
 BeginCmp
 TimeStamp = /54A0A224;
@@ -11,161 +11,161 @@ BeginCmp
 TimeStamp = /54A0B1CB;
 Reference = C1;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A0AA7F;
 Reference = C2;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /549F88B8;
 Reference = C3;
 ValeurCmp = 10nF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54B5BE86;
 Reference = C4;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54B5BE54;
 Reference = C5;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54B5BE23;
 Reference = C6;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54B5BD71;
 Reference = C7;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B50A30;
 Reference = C8;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B50A0F;
 Reference = C9;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B50968;
 Reference = C10;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B525CF;
 Reference = C11;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B5329C;
 Reference = C12;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B532CE;
 Reference = C13;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B532F5;
 Reference = C14;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B53713;
 Reference = C15;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B5374A;
 Reference = C16;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B53772;
 Reference = C17;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B53B3D;
 Reference = C18;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B53B75;
 Reference = C19;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B53BA2;
 Reference = C20;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B54DDE;
 Reference = C21;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B54E21;
 Reference = C22;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A9B3AB/54B54E55;
 Reference = C23;
 ValeurCmp = 0.1uF;
-IdModule  = Capacitors_SMD:C_0805_HandSoldering;
+IdModule  = Capacitors_SMD:C_0603_HandSoldering;
 EndCmp
 
 BeginCmp
@@ -214,42 +214,42 @@ BeginCmp
 TimeStamp = /54A043D7;
 Reference = R1;
 ValeurCmp = 10K;
-IdModule  = Resistors_SMD:R_0805_HandSoldering;
+IdModule  = Resistors_SMD:R_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A04352;
 Reference = R2;
 ValeurCmp = 10K;
-IdModule  = Resistors_SMD:R_0805_HandSoldering;
+IdModule  = Resistors_SMD:R_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /54A0C1E4;
 Reference = R3;
 ValeurCmp = 10K;
-IdModule  = Resistors_SMD:R_0805_HandSoldering;
+IdModule  = Resistors_SMD:R_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /549F945E;
 Reference = R4;
 ValeurCmp = 1K;
-IdModule  = Resistors_SMD:R_0805_HandSoldering;
+IdModule  = Resistors_SMD:R_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /549F93DF;
 Reference = R5;
 ValeurCmp = 10K;
-IdModule  = Resistors_SMD:R_0805_HandSoldering;
+IdModule  = Resistors_SMD:R_0603_HandSoldering;
 EndCmp
 
 BeginCmp
 TimeStamp = /549F8BBE;
 Reference = R6;
 ValeurCmp = 10K;
-IdModule  = Resistors_SMD:R_0805_HandSoldering;
+IdModule  = Resistors_SMD:R_0603_HandSoldering;
 EndCmp
 
 BeginCmp
@@ -291,7 +291,7 @@ BeginCmp
 TimeStamp = /54A9B3AB/54B4F6B0;
 Reference = U6;
 ValeurCmp = LCMX02-640UHC-4TG144C;
-IdModule  = SMD_Packages:TQFP-144;
+IdModule  = Housings_QFP:TQFP-144_20x20mm_Pitch0.5mm;
 EndCmp
 
 BeginCmp
